appHeader alignment correction

--- a/css/container.css
+++ b/css/container.css
@@ -7,8 +7,8 @@
 
 .appHeader {
     font-size: 30px;
-    margin: 30px 0;
-    height: 
+    margin: 50px 0px 30px;
+    height: 35px;
 }
 
 @media (max-width: 767px) {
